# django-aboutconfig

./: .coveragerc  .gitignore  .gitlab-ci.yml  .hgignore  .hgtags  .pylintrc  Dockerfile  README.md  README.rst  codecov.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
aboutconfig/: __init__.py  admin.py  apps.py  constants.py  forms.py  models.py  serializers.py  utils.py  widgets.py
aboutconfig/management/commands/: config_warm_cache.py
aboutconfig/migrations/: 0001_initial.py  0002_initial_data.py
aboutconfig/templatetags/: config.py
docs/: Makefile  modules.rst
docs/source/: api.rst  conf.py  config.rst  custom_dt.rst  index.rst  install.rst  usage.rst
requirements/: dj110.txt  dj111.txt  dj18.txt  dj19.txt  dj20.txt  dj21.txt  dj22.txt  dj30.txt
scripts/: docker_start.sh  submit_codecov.py
tests/test_app/tests/: test_admin.py  test_apps.py  test_config_warm_cache.py  test_constants.py  test_models.py  test_module.py  test_serializers.py  test_templatetags.py  test_utils.py
tests/test_project/: settings.py  urls.py  wsgi.py
