[build-system]
requires = ["setuptools", "wheel"]


[tool.black]
exclude = 'migrations'
line-length = 100
target-version = ['py36', 'py37', 'py38']


[tool.isort]
line_length = 100
skip = ['migrations', 'docs']
known_third_party = 'django'
known_first_party = 'aboutconfig'
default_section = 'FIRSTPARTY'
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
indent = 4
multi_line_output = 3
include_trailing_comma = true
order_by_type = true
combine_as_imports = true
lines_after_imports = 2
